fixed bugs